...
                Alert(
                    title: Text("Error"),
                    message: Text(viewModel.errorMessage ?? "An unknown error occurred."),
                    dismissButton: .default(Text("OK"))
                )
            }
            .accessibilityIdentifier("recipeDetailsView")
            .task {
                await viewModel.fetchRecipeDetails(id: recipeID)
                if viewModel.errorMessage != nil {
                    showAlert = true
                }
            }
...
